@@ -1,5 +1,11 @@
 2008-05-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Pool connection when CWD, SIZE command fails.
+	* src/FtpNegotiationCommand.cc
+	* src/FtpNegotiationCommand.h
+
+2008-05-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Renamed HttpNullDownloadCommand as HttpSkipResponseCommand
 	* src/HttpResponseCommand.cc
 	* src/HttpSkipResponseCommand.cc
